Feat: Enklere oppstart og healthcheck. Sonar fix. (#1601)